--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.0.0)
 project(CPlusStudy VERSION 0.1.0)
 
 
-add_subdirectory (Hello)
-add_subdirectory (Hello2)
-add_subdirectory (earth)
+#add_subdirectory (Hello)
+#add_subdirectory (Hello2)
+#add_subdirectory (earth)
+add_subdirectory (callback)
